<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name_wo_uc">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашние</string>

    <string name="yp_course">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="developer_email">ordi-n-x3@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="searched">Вы искали</string>

    <string name="demo_time">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="search_nothing">Ничего не нашлось</string>
    <string name="search_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="clear_button_description">Очистить строку поиска</string>
    <string name="add_to_playlist_button_description">Добавить в плейлист</string>
    <string name="play_button_description">Воспроизведение и пауза</string>
    <string name="favorite_button_description">Добавить в избранное</string>

    <string name="create">Создать</string>
    <string name="album_name">Название*</string>
    <string name="album_description">Описание</string>

    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="close_new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="close_new_playlist_dialog_text">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="successfully_added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист</string>

    <string name="no_tracks_in_playlist">В этом плейлисте пока\nнет треков</string>
    <string name="delete_track_from_playlist_dialog_title">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share_empty_playlist_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_text">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="more_button_description">Больше действий</string>

    <plurals name="tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>

</resources>