<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"

        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingsListStyle"
        android:paddingEnd="15dp"
        android:text="@string/theme"
        android:textAppearance="@style/SettingsListStyle"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareButton"
        style="@style/SettingsListStyle"
        android:drawableEnd="@drawable/ic_share_24"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportButton"
        style="@style/SettingsListStyle"
        android:drawableEnd="@drawable/ic_support_24"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreementButton"
        style="@style/SettingsListStyle"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/agreement" />


</LinearLayout>