<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/basic_padding"
    style="@style/MainActivityStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/app_name_wo_uc"
        android:textColor="?attr/colorOnSecondary"
        android:background="@android:color/transparent"
        style="@style/MainTitleStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"
        style="@style/MainButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library_button"
        android:text="@string/library"
        app:icon="@drawable/ic_library_24"
        style="@style/MainButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        style="@style/MainButtonStyle" />


</LinearLayout>