<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/basic_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="6dp">

        <ImageView
            android:id="@+id/back_from_settings"
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="@string/settings"
            android:textColor="@color/text_black"
            android:textSize="@dimen/basic_text_size" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingEnd="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_text_padding"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/settings_right_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_text_padding"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_share_24" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/settings_right_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_text_padding"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_support_24" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/settings_right_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_text_padding"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_arrow_forward_24" />

    </FrameLayout>


</LinearLayout>