<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/large_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/large_padding" />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:tint="@null"
            tools:src="@drawable/placeholder_45" />

        <TextView
            android:id="@+id/trackName"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/button_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_play_100"
            android:backgroundTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toStartOf="@id/favoritesButton"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/favoritesButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/button_not_in_favorites"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <TextView
            android:id="@+id/playProgress"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/demo_time"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/trackTime"
            style="@style/ListOfTrackAttrNameStyle"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintTag="trackTimeTag"
            app:layout_constraintTop_toBottomOf="@id/playProgress"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/album"
            style="@style/ListOfTrackAttrNameStyle"
            android:text="@string/album"
            app:layout_constraintTag="albumTag"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/releaseDate"
            style="@style/ListOfTrackAttrNameStyle"
            android:text="@string/year"
            app:layout_constraintTag="releaseDateTag"
            app:layout_constraintTop_toBottomOf="@id/album"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/genre"
            style="@style/ListOfTrackAttrNameStyle"
            android:text="@string/genre"
            app:layout_constraintTag="genreTag"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/country"
            style="@style/ListOfTrackAttrNameStyle"
            android:text="@string/country"
            app:layout_constraintTag="countryTag"
            app:layout_constraintTop_toBottomOf="@id/genre"
            tools:ignore="MissingConstraints"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/list_of_track_attr_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTag, albumTag, releaseDateTag, genreTag, countryTag" />

        <TextView
            android:id="@+id/trackTimeValue"
            style="@style/ListOfTrackAttrValueStyle"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/playProgress"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/ListOfTrackAttrValueStyle"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/releaseDateValue"
            style="@style/ListOfTrackAttrValueStyle"
            app:layout_constraintTop_toBottomOf="@id/album"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/ListOfTrackAttrValueStyle"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/ListOfTrackAttrValueStyle"
            app:layout_constraintTop_toBottomOf="@id/genre"
            tools:text="Великобритания" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>