<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="@dimen/basic_padding"
        android:paddingVertical="8dp">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="start"
            android:background="@drawable/search_box_backgroud"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/yp_black" />


        <ImageView
            android:id="@+id/clear_button"
            style="@style/SearchBoxIconStyle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone" />

    </FrameLayout>
    
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminateTint="@color/yp_blue"
        android:layout_gravity="center"
        android:layout_marginTop="124dp"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracksList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="0"
        tools:listitem="@layout/track_item" />

    <LinearLayout
        android:id="@+id/search_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="86dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/search_placeholder_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:tint="@null"
            tools:src="@drawable/search_nothing" />

        <TextView
            android:id="@+id/search_placeholder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/basic_padding"
            android:gravity="center"
            android:textAppearance="@style/SearchActivityTextStyle"
            tools:text="Ничего не нашлось" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            style="@style/SearchActivityButton"
            android:text="@string/update"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        tools:visibility="visible"
        >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SearchActivityTextStyle"
            android:layout_marginBottom="20dp"
            android:text="@string/searched"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="8"
            tools:listitem="@layout/track_item" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            style="@style/SearchActivityButton"
            android:text="@string/clear_history"
            android:layout_marginBottom="@dimen/basic_padding"/>

    </LinearLayout>

</LinearLayout>